[FIX][UX] UAB: PHP errors at the bottom were covered by the aside menu ---
See merge request tikiwiki/tiki!6217

--- a/themes/base_files/css/feature/adminui.scss
+++ b/themes/base_files/css/feature/adminui.scss
@@ -25,6 +25,7 @@ body.tiki-admin {
 @media (min-width: 993px) and (max-width: 2000px /*1675px *//*1370px */) {
     .tiki-admin.uab #tikifeedback,
     .tiki-admin.uab .admin-content,
+    .tiki-admin.uab .errors-wrapper,
     .tiki-admin.uab .bottom_modules {
         padding-left: 320px !important;
     }
